--- a/HangfireForDotNer/HangfireForDotNet/HangfireForDotNet.csproj
+++ b/HangfireForDotNer/HangfireForDotNet/HangfireForDotNet.csproj
@@ -7,4 +7,16 @@
         <RootNamespace>HangfireForDotNer</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Hangfire" Version="1.7.27" />
+        <PackageReference Include="Hangfire.PostgreSql" Version="1.8.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
 </Project>
