--- a/HangfireForDotNer/HangfireForDotNet/appsettings.Development.json
+++ b/HangfireForDotNer/HangfireForDotNet/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Data": {
+    "DatabaseConnection": {
+      "ConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=root;Database=hangfire"
+    }
   }
 }
